Fixing Dev Tools Tab for FF.
Also fixing some really stupid FF specific bugs... holy crap.
The suggest feature is broken on FF and will probably remain that way forever due to lack of api support.

--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -23,6 +23,10 @@ input[type=checkbox] {
     height: 14px;
 }
 
+div, span {
+    font-size: 12px;
+}
+
 #title {
     background-image: url("../../../icons/icon-48x48.png");
     background-repeat: no-repeat;
